# Mneme

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: auto-pr-merge.yml  ci.yml  release.yml
crates/mneme-cli/: Cargo.toml
crates/mneme-cli/src/: lib.rs  main.rs
crates/mneme-core/: Cargo.toml
crates/mneme-core/examples/: personal_memory.rs
crates/mneme-core/src/: lib.rs  v1.rs  v2.rs
crates/mneme-eval/: Cargo.toml
crates/mneme-eval/src/: candidate.rs  cli.rs  dogfood.rs  error.rs  fake.rs  lib.rs  main.rs  mneme_mcp.rs  mneme_v1.rs  mneme_v2.rs  redaction.rs  report.rs  runtime.rs  scenario.rs  target.rs  trend.rs
crates/mneme-mcp/: Cargo.toml  README.md
crates/mneme-mcp/src/: lib.rs  main.rs
docs/: README.md  agent-hook-contract.md  agent-integration.md  agent-runtime-config.md  api-contract.md  ci-cost-policy.md  distribution-policy.md  eval-candidate-workflow.md  eval-harness-acceptance.md  eval-scenario-format.md  eval-target-adapter-contract.md  extraction-adapter-contract.md  getting-started.md  live-provider-baseline-runbook.md  live-provider-baseline.md  local-cli.md  local-install.md  mcp.md  memory-review-artifacts.md  mneme-v1-personal-core.md  model-extraction-adapter.md  openai-provider-wrapper.md  package-readiness.md  personal-runtime.md  phase-3-readiness.md  release-checklist.md  v1-stability.md
docs/eval-harness/: README.md  eval-candidate-workflow.md  eval-harness-acceptance.md  eval-scenario-format.md  eval-target-adapter-contract.md  live-provider-baseline-runbook.md  live-provider-baseline.md  long-horizon-scale-check.md  mcp-hard-dogfood.md  product-dogfood-experiment.md  product-heldout-gates.md  product-review-summary.md  product-validation-loop.md  v1-dogfood-execution.md  v1-dogfood-readiness.md  v1-dogfood-triage.md  v1-hard-dogfood.md  v1-manual-dogfood.md  v1-ontology-benchmark.md  v1-real-use-pilot.md
docs/project/: README.md  api-contract.md  distribution-policy.md  mneme-prd-v1-draft.md  package-readiness.md  phase-3-readiness.md  release-checklist.md  roadmap-and-repo-strategy.md  v1-final-readiness.md
docs/v1/: README.md  agent-hook-contract.md  agent-runtime-config.md  evidence-scorecard.md  getting-started.md  local-install.md  natural-language-ontology.md  outcome-gate.md  personal-runtime.md  quickstart.md  v1-completion-criteria.md  v1-stability.md
docs/v2/: README.md  evaluation.md  quickstart.md  security-model.md  team-agent-workflow.md  team-memory-core.md  use-cases.md
evals/fixtures/: command-extractor.sh
evals/ontology/: v1-natural-language-ontology-v0.json
examples/: mneme-agent-hook.env.example  product-validation-review.example.json  v1-real-use-feedback.example.json
examples/claude-code/: CLAUDE.example.md  README.md  mcp-config.example.json
examples/codex/: AGENTS.example.md  README.md  mcp-config.example.toml  smoke-summary.example.json
examples/cursor/: README.md  mneme-continuity-rule.mdc
examples/mcp-client-smoke/: README.md  summary.example.json
scripts/: distribution-policy-check.sh  eval-integrity-check.py  install-local.sh  live-baseline.sh  long-horizon-scale-check.py  mcp-client-continuity-smoke.py  mcp-hard-dogfood.py  mneme-agent-hook.sh  mneme-mcp-stdio.py  mneme-outcome-verifier.py  outcome-gate-smoke.sh  package-check.sh  product-dogfood-experiment.py  product-heldout-gates.py  product-review-summary.py  product-validation-loop.py  public-safety-check.sh  quality-gate.sh  quickstart-smoke.sh  v1-dogfood.sh  v1-final-readiness-check.sh  v1-hard-dogfood.py  v1-manual-dogfood.py  v1-ontology-benchmark.py  v1-real-use-pilot.py  v2-team-dogfood.py
spec/: 00_constitution.md
wrappers/: openai_extractor.py
(+114 files in other folders)
