[workspace]
members = [
    "crates/mneme-cli",
    "crates/mneme-core",
    "crates/mneme-eval",
    "crates/mneme-mcp",
]
resolver = "2"

[workspace.package]
version = "0.75.0"
edition = "2021"
rust-version = "1.76"
license = "MIT"

[workspace.dependencies]
mneme-core = { path = "crates/mneme-core", version = "0.75.0" }
sha2 = "0.10"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
panic = "warn"
unwrap_used = "warn"
