[package]
name = "mneme-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "mneme"
path = "src/main.rs"

[dependencies]
mneme-core = { path = "../mneme-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
