[package]
name = "mneme-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Scenario eval harness and quality gates for Mneme."
repository = "https://github.com/Orvek-dev/Mneme"
readme = "../../README.md"
publish = false

[dependencies]
mneme-core.workspace = true
mneme-mcp = { path = "../mneme-mcp", version = "0.67.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[lints]
workspace = true
