[package]
name = "mneme-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local MCP stdio server for Mneme personal and team-memory tools."
repository = "https://github.com/Orvek-dev/Mneme"
readme = "../../README.md"
publish = false

[[bin]]
name = "mneme-mcp"
path = "src/main.rs"

[dependencies]
mneme-core.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
